--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <div class="text-center py-2"><button class="btn-cont bg-bgpurple2 px-2 py-1 rounded-xl text-center">Contato</button></div>
         </div>
     </header>
-    <section class="apresentacao flex justify-center">
-        <div class="apresentacao-body px-4 pt-5 my-10">
+    <section class="apresentacao flex flex-col justify-center">
+        <div class="apresentacao-body px-4 pt-3 my-10">
             <div class="apresentacao-content text-center text-xl font-bold">
                 <h1>OLÁ, ME CHAMO <span class="text-bgpurple1 block text-4xl py-5">GIOVANE JESUS</span>
                 DESENVOLVENDOR FRONT-END</h1>
             </div>
-            <div class="linkedin-github flex justify-center gap-4 mt-20">
+            <div class="linkedin-github flex justify-center gap-4 mt-12">
                 <a href="https://www.linkedin.com/in/giovane-caetano-de-jesus-06a313286/" target="_blank">
                     <div class="linkedin flex gap-2  items-center  p-4 border-2 border-blue-500 rounded-md">
                         <img src="./src/images/linkedin-preto-branco.png" class="w-9">
@@ -63,6 +63,9 @@
                     </a>
                 </div>
             </div>
+        </div>
+        <div class="scroll  h-3 flex justify-center items-center gap-3">
+            <p>Scroll down</p><i class="fa-solid fa-angle-down"></i>
         </div>
     </section>
     <!--SECTION ABOUT ME-->
