--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body class="bg-bgblack">
     <header>
         <nav class=" flex items-center justify-between">
-            <div class="logo mx-4"><span class="text-bgpurple1">&lt;</span>G.Jesus/<span class="text-bgpurple1">&gt;</span></div>
+            <!--<div class="logo mx-4"><span class="text-bgpurple1">&lt;</span>G.Jesus/<span class="text-bgpurple1">&gt;</span></div>-->
+            <div class="">
+                <img src="./src/images/logo.png" class="w-28 h-20">
+            </div>
             <button class="hamburger md:hidden mr-4"><img src="./src/images/menu-white.png" alt=""></button>
             <div class="nav-list hidden md:flex items-center gap-20 bg-bgpurple1 px-5 py-3 rounded-l-xl font-bold ">
                 <ul class="flex gap-8">
@@ -34,53 +37,68 @@
         </div>
     </header>
     <section class="apresentacao flex flex-col justify-center">
-        <div class="apresentacao-body px-4 pt-3 my-10">
-            <div class="apresentacao-content text-center text-xl font-bold">
-                <h1>OLÁ, ME CHAMO <span class="text-bgpurple1 block text-4xl py-5">GIOVANE JESUS</span>
-                DESENVOLVENDOR FRONT-END</h1>
-            </div>
-            <div class="linkedin-github flex justify-center gap-4 mt-12">
-                <a href="https://www.linkedin.com/in/giovane-caetano-de-jesus-06a313286/" target="_blank">
-                    <div class="linkedin flex gap-2  items-center  p-4 border-2 border-blue-500 rounded-md">
-                        <img src="./src/images/linkedin-preto-branco.png" class="w-9">
-                        <p class="text-xl">LinkedIn</p>
+        <div class="h-full flex flex-col justify-center">
+            <div class="flex justify-center">
+                <div class="apresentacao-body px-4 pt-2 mt-4">
+                    <div class="apresentacao-content text-center text-3xl font-bold ">
+                        <h1>OLÁ, ME CHAMO <span class="text-bgpurple1 block text-4xl py-5">GIOVANE JESUS</span>
+                        DESENVOLVENDOR FRONT-END</h1>
                     </div>
-                </a>
-                <a href="https://github.com/cjota-00" target="_blank">
-                    <div class="github flex gap-2  items-center  p-4 border-2 border-purple-600 rounded-md">
-                        <img src="./src/images/github-preto-branco.png" class="w-9">
-                        <p class="text-xl">Linkedin</p>
+                    <!--Social midia-->
+                    <div class="linkedin-github flex justify-center gap-4 mt-16">
+                        <a href="https://www.linkedin.com/in/giovane-caetano-de-jesus-06a313286/" target="_blank">
+                            <div class="linkedin flex gap-2  items-center  px-4 py-2 border-2 border-blue-500 rounded-md">
+                                <img src="./src/images/linkedin-preto-branco.png" class="w-9">
+                                <p class="text-xl">LinkedIn</p>
+                            </div>
+                        </a>
+                        <a href="https://github.com/cjota-00" target="_blank">
+                            <div class="github flex gap-2  items-center  px-4 py-2 border-2 border-purple-600 rounded-md">
+                                <img src="./src/images/github-preto-branco.png" class="w-9">
+                                <p class="text-xl">Linkedin</p>
+                            </div>
+                        </a>
                     </div>
-                </a>
-            </div>
-            <div class="flex justify-center items-center">
-                <div class="instagram mt-4">
-                    <a href="https://www.instagram.com/giovane_jesus_/" target="_blank">
-                        <div class="github flex gap-2  items-center  p-4 border-2 border-[#dd2a7b] rounded-md">
-                            <img src="./src/images/instagram-preto-branco.png" class="w-9">
-                            <p class="text-xl">instagram</p>
+                    <div class="flex justify-center items-center">
+                        <div class="instagram mt-4">
+                            <a href="https://www.instagram.com/giovane_jesus_/" target="_blank">
+                                <div class="github flex gap-2  items-center px-4 py-2 border-2 border-[#dd2a7b] rounded-md">
+                                    <img src="./src/images/instagram-preto-branco.png" class="w-9">
+                                    <p class="text-xl">instagram</p>
+                                </div>
+                            </a>
                         </div>
-                    </a>
+                    </div>
+                </div>
+                <div class="hidden md:block">
+                    <div class="">
+                        <img src="./src/images/logo.png" alt="">
+                    </div>
                 </div>
             </div>
+            <div class="scroll flex justify-center items-center gap-3 mt-4">
+                <p>Scroll down</p><i class="fa-solid fa-angle-down"></i>
+            </div>
         </div>
-        <div class="scroll  h-3 flex justify-center items-center gap-3">
-            <p>Scroll down</p><i class="fa-solid fa-angle-down"></i>
-        </div>
+        
     </section>
     <!--SECTION ABOUT ME-->
-    <section class="about-me" id="sobre">
+    <section class="about-me pt-8 md:pt-0" id="sobre">
         <div class="flex flex-col md:flex-row md:justify-center items-center h-full">
             <div class="about-me-contet md:flex-1 ">
                  <!--srction about me desktop-->
-                <div class="cirlce hidden md:flex mx-32  items-center justify-center ">
+                 <!--<div class="cirlce hidden md:flex mx-32  items-center justify-center ">
                     <div class="small-cirlce flex justify-center items-center font-bold text-4xl">
                         Sobre Mim
                     </div>
+                </div>-->
+                <div class="about-me-left hidden md:flex justify-center items-center text-5xl font-bold text-[#882276]">
+                    <div class="">UM POUCO <span class=" text-[60px] block text-center text-bgpurple1">+</span> <span class="text-center block">SOBRE <br> MIM</span></div>
                 </div>
+                
                 <!--srction about me desktop-->
                 <div class="about-me-mobile md:hidden">
-                    <h1 class="text-center font-bold">Sobre Mim</h1>
+                    <h1 class="text-center font-bold text-sm ">UM POUCO <span class="block text-bgpurple1">+</span> SOBRE MIM</h1>
                     <div class="barras  flex flex-col justify-center items-center">
                         <div class="bg-bgpurple1 mt-4 w-48 h-2 rounded-lg"></div>
                         <div class="bg-bgpurple3 mt-3 w-36 h-2 rounded-lg"></div>
