--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="about-me-right md:flex-1">
                 <div class="about-me-text px-4">
                     <h1 class="text-bgpurple3 font-bold  py-5">Brasília, DF</h1>
-                    <p class="text-justify">Olá! Meu nome é Giovane Jesus atualmente estudo ciência da computação na Cruzeiro so sul virtual, hoje na área da programação tenho o conhecimento de desenvolvedor Front-End mas ainda estudando para me tornar um desenvolvedor Full-stack. Tenho uma paixão imensa por transformar ideias em interfaces de usuário eficientes e esteticamente agradáveis. Com especialidade em JavaScript, Tailwindcss, HTML e CSS, eu me dedico a criar experiências digitais que sejam não apenas funcionais, mas também inspiradoras</p>
+                    <p class="text-justify">Olá! Meu nome é Giovane Jesus atualmente estudo ciência da computação na Cruzeiro do sul virtual, hoje na área da programação tenho o conhecimento de desenvolvedor Front-End mas ainda estudando para me tornar um desenvolvedor Full-stack. Tenho uma paixão imensa por transformar ideias em interfaces de usuário eficientes e esteticamente agradáveis. Com especialidade em JavaScript, Tailwindcss, HTML e CSS, eu me dedico a criar experiências digitais que sejam não apenas funcionais, mas também inspiradoras</p>
                 </div>
                 <div class=" my-16">
                     <a href="/src/Giovane-Curriculo.pdf" download="Giovane-Curriculo" type="application/pdf" class="flex justify-center items-center">
@@ -217,7 +217,7 @@
                         <p class="symbol">+</p>
                     </div>
                     <div class="acc-text">
-                        <p>Capacidade para indentificar problemas e resolver de forma eficaz,sempre buscando a melhor maneira de otimizar processos e entregar resultados de alta qualidade.</p>
+                        <p>Capacidade para identificar problemas e resolver de forma eficaz, sempre buscando a melhor maneira de otimizar processos e entregar resultados de alta qualidade.</p>
                     </div>
                 </div>
                 <div class="acc-box">
@@ -266,7 +266,7 @@
             <div class="habili-box m-4 px-4 py-2 border-2 border-bgpurple1 rounded-xl flex flex-col  items-center">
                 <h1 class="text-bgpurple3 font-bold">SOLUÇÕES DE PROBLEMAS</h1>
                 <p class="text-justify mt-3">
-                    Capacidade para indentificar problemas e resolver de forma eficaz,sempre buscando a melhor maneira de otimizar processos e entregar resultados de alta qualidade.
+                    Capacidade para identificar problemas e resolver de forma eficaz, sempre buscando a melhor maneira de otimizar processos e entregar resultados de alta qualidade.
                 </p>
             </div>
             <div class="habili-box m-4 px-4 py-2 border-2 border-bgpurple1 rounded-xl flex flex-col  items-center">
@@ -304,7 +304,7 @@
                 <div class="w-[400px] mt-4 px-6">
                     <h2 class="font-bold text-xl text-bgpurple1">My Burger</h2>
                     <p class="pt-2">Projeto venda de hamburguer que conta com sistema de carrinho.</p>
-                    <p class="pt-2">Inpirado esteticamente no projeto B7Burger da <a href="https://alunos.b7web.com.br" class="text-blue-600 underline">B7web</a></p>
+                    <p class="pt-2">Inspirado esteticamente no projeto B7Burger da <a href="https://alunos.b7web.com.br" class="text-blue-600 underline">B7web</a></p>
                     <p class="pt-2 text-blue-400">Tecnologias usadas: HTML, CSS, Tailwindcss e JavaScript</p>
                     <div class="text-center mt-4">
                         <a href="https://cjota-00.github.io/hamburguer-venda/" target="_blank"><button class="px-8 py-2 bg-bgpurple1 rounded-lg">Visitar</button></a>
@@ -360,7 +360,7 @@
                     <div class=" mt-4">
                         <h2 class="font-bold text-xl text-bgpurple1">My Burger</h2>
                         <p class="pt-2">Projeto venda de hamburguer que conta com sistema de carrinho.</p>
-                        <p class="pt-2">Inpirado esteticamente no projeto B7Burger da <a href="https://alunos.b7web.com.br" class="text-blue-600 underline">B7web</a></p>
+                        <p class="pt-2">Inspirado esteticamente no projeto B7Burger da <a href="https://alunos.b7web.com.br" class="text-blue-600 underline">B7web</a></p>
                         <p class="pt-2 text-blue-400">Tecnologias usadas: HTML, CSS, Tailwindcss e JavaScript</p>
                         <div class="text-center mt-4">
                             <a href="https://cjota-00.github.io/hamburguer-venda/" target="_blank"><button class="px-8 py-2 bg-bgpurple1 rounded-lg">Visitar</button></a>
