--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./dist/output.css">
     <link rel="stylesheet" href="./dist/port.css">
-    <title>Document</title>
+    <title>Portfólio </title>
 </head>
 <body class="bg-bgblack">
     <header>
@@ -54,7 +54,7 @@
                         <a href="https://github.com/cjota-00" target="_blank">
                             <div class="github flex gap-2  items-center  px-4 py-2 border-2 border-purple-600 rounded-md">
                                 <img src="./src/images/github-preto-branco.png" class="w-9">
-                                <p class="text-xl">Linkedin</p>
+                                <p class="text-xl">Github</p>
                             </div>
                         </a>
                     </div>
@@ -105,11 +105,10 @@
                     </div>
                 </div>
             </div>
-
             <div class="about-me-right md:flex-1">
                 <div class="about-me-text px-4">
                     <h1 class="text-bgpurple3 font-bold  py-5">Brasília, DF</h1>
-                    <p class="text-justify">Olá! Meu nome é Giovane Jesus atualmente estudo ciência da computação na Cruzeiro do sul virtual, hoje na área da programação tenho o conhecimento de desenvolvedor Front-End mas ainda estudando para me tornar um desenvolvedor Full-stack. Tenho uma paixão imensa por transformar ideias em interfaces de usuário eficientes e esteticamente agradáveis. Com especialidade em JavaScript, Tailwindcss, HTML e CSS, eu me dedico a criar experiências digitais que sejam não apenas funcionais, mas também inspiradoras</p>
+                    <p class="text-justify">Olá! Meu nome é Giovane Jesus atualmente estudo ciência da computação na Cruzeiro do sul virtual, hoje na área da programação tenho o conhecimento de desenvolvedor Front-End mas ainda estudando para me tornar um Design UX/UI. Tenho uma paixão imensa por transformar ideias em interfaces de usuário eficientes e esteticamente agradáveis. Com especialidade em JavaScript, Tailwindcss, HTML e CSS, eu me dedico a criar experiências digitais que sejam não apenas funcionais, mas também inspiradoras</p>
                 </div>
                 <div class=" my-16">
                     <a href="/src/Giovane-Curriculo.pdf" download="Giovane-Curriculo" type="application/pdf" class="flex justify-center items-center">
